--- a/index.html
+++ b/index.html
@@ -5,15 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GitHub repo example</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hosting with <a href="https://www.netlify.com/">Netlify</a></h1>
-    <form>
-      <input type="email" placeholder="Enter your email" />
-      <input type="password" placeholder="Enter your password" />
-      <input type="submit" value="login" />
-    </form>
+    <div class="container">
+      <h1>Hosting with <a href="https://www.netlify.com/">Netlify</a></h1>
+      <a
+        href="mailto:catalinamunevar@hotmail.com"
+        class="btn btn-primary contact-btn"
+        >Contact me
+      </a>
+      <form>
+        <input type="email" placeholder="Enter your email" />
+        <input type="password" placeholder="Enter your password" />
+        <input type="submit" value="login" />
+      </form>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
